commit n°21: --fichier index.html, corrections diverses: -ligne 50 titre h3 -lignes 56 à 59: balises br et span -ligne 65: titre h3 -ligne 71 à 74: balises br et span --fichier main.scss -ligne 64: color h1 -ligne 70: color h2 -ligne 91: backgroundColor -lignes 98 à 103: règles pour h3 -ligne 108: fontSize -ligne 111: textAlign -lignes 114 à 117: margin et textDecoration -lignes 126 à 144: copie de la class '.text1'

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -62,12 +62,13 @@ body {
   font-family: "Panthera";
   font-size: 3vw;
   letter-spacing: 0.3vw;
+  color: #9e91b7;
 }
 .wrapper header .titre .bloc h2 {
   font-family: "BEYNO";
   font-size: 1.6vw;
   font-weight: 100;
-  color: #F2CEF2;
+  color: #9e91b7;
 }
 .wrapper header .titre .bloc p {
   font-family: "Cantarell";
@@ -84,56 +85,63 @@ body {
   position: relative;
   right: -8.05vw;
   top: -4.5vw;
-  background-image: url("/Assets/Illustrations+Logo/All-pages/back_footer.png");
+  background-color: #021740;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 .wrapper header .personnage .text1 {
-  border: 2px solid yellow;
   width: 20.4vw;
   color: #fff;
 }
-.wrapper header .personnage .text1 h2 {
+.wrapper header .personnage .text1 h3 {
+  margin-left: 1.8vw;
+  margin-bottom: 0.4vw;
   font-family: "BEYNO";
-  font-weight: 100;
-  font-size: 1vw;
+  font-size: 1.15vw;
+  color: #9e91b7;
 }
 .wrapper header .personnage .text1 p {
-  background-color: red;
   width: 16.6vw;
   font-family: "Cantarell";
-  font-size: 0.8vw;
+  font-size: 0.678vw;
   font-weight: 500;
   line-height: 1.1vw;
+  text-align: justify;
   text-shadow: 0.035vw 0.035vw #fff;
   margin: auto;
+  margin-bottom: 3.5vw;
+}
+.wrapper header .personnage .text1 p span {
+  text-decoration: underline;
 }
 .wrapper header .personnage .pantherhome3 {
   width: 14.5vw;
 }
 .wrapper header .personnage .text2 {
-  border: 2px solid yellow;
   width: 20.4vw;
   color: #fff;
 }
-.wrapper header .personnage .text2 .text22 {
-  border: 10px solid blue;
-  margin: auto;
-}
-.wrapper header .personnage .text2 .text22 h2 {
+.wrapper header .personnage .text2 h3 {
+  margin-left: 1.8vw;
+  margin-bottom: 0.4vw;
   font-family: "BEYNO";
-  font-weight: 100;
-  font-size: 1vw;
+  font-size: 1.15vw;
+  color: #9e91b7;
 }
-.wrapper header .personnage .text2 .text22 p {
-  background-color: red;
+.wrapper header .personnage .text2 p {
   width: 16.6vw;
   font-family: "Cantarell";
-  font-size: 0.8vw;
+  font-size: 0.678vw;
   font-weight: 500;
   line-height: 1.1vw;
+  text-align: justify;
   text-shadow: 0.035vw 0.035vw #fff;
+  margin: auto;
+  margin-bottom: 3.5vw;
+}
+.wrapper header .personnage .text2 p span {
+  text-decoration: underline;
 }
 .wrapper header .personnage .pantherhome4 {
   width: 10.63vw;
